name:                lh-workshop 
version:             0.1.0.0
synopsis:            LiquidHaskell Workshop Materials
-- description:
homepage:            https://github.com/ucsd-progsys/lh-workshop
license:             MIT
license-file:        LICENSE
author:              Ranjit Jhala
maintainer:          jhala@cs.ucsd.edu
copyright:           Ranjit Jhala
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable homepage 
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base,
                       text,
                       bytestring,
                       containers,
                       pandoc,
                       pandoc-types,
                       template,
                       directory,
                       filepath,
                       either
